# hdl-sim

./: README.md  counter_demo.vcd  demo_output.vcd  dune-project  parallel_demo.vcd  test_alu.vcd  test_counter.vcd  test_mux.vcd  test_register.vcd
_build/: .db  .digest-db  log
_build/default/: META.hdl-sim  hdl-sim.dune-package  hdl-sim.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: Ast.ml  Elab_ir.ml  Example.ml  Lexer.ml  Operations.ml  Parse.ml  Parser.ml  Parser.mli  Parser.mly  Parser__mock.ml.mock  Parser__mock.mli.inferred  Ptree.ml  Ptree.mli  Values.ml  hdl_sim_lib.cma  hdl_sim_lib.cmxa  hdl_sim_lib.cmxs  hdl_sim_lib.ml-gen  verilog_elab.cma  verilog_elab.cmxa  verilog_elab.cmxs  verilog_elab.ml-gen  verilog_lower.cma  verilog_lower.cmxa  verilog_lower.cmxs  verilog_lower.ml-gen  verilog_parser.cma  verilog_parser.cmxa  verilog_parser.cmxs  verilog_parser.ml-gen
_build/default/lib/.hdl_sim_lib.objs/: hdl_sim_lib__Ast.impl.all-deps  hdl_sim_lib__Ast.impl.d  hdl_sim_lib__EvalEnv.impl.all-deps  hdl_sim_lib__Graph.impl.d  (+8 more)
examples/: README_TESTS.md  invalid_assign_input.v  invalid_begin_end.v  invalid_blocking_in_ff.v  invalid_cycle.v  invalid_multi_driver.v  invalid_output_reg.v  invalid_sensitivity.v  invalid_width.v  invalid_xz_digits.v  test_alu.v  test_counter.v  valid_alu.v  valid_counter.v  valid_mux.v  valid_register.v
lib/: AstConv.ml  AstConv.mli  Elab_ir.mli  Elaborate.ml  Elaborate.mli  EvalEnv.ml  Graph.ml  Lexer.mll  Parse.mli  VERILOG_PARSER_README.md  Vcd.ml  dune
test/: README.md  dune  test_hdl_sim.ml
(+155 files in other folders)
